test/testdata/syntax_errors/illegal_char.lox
// noformat
print 1 $ 2; // error: illegal character U+0024 '$'
